# Finance-Systems-Requirements-Pack-Generator

./: .gitattributes  .gitignore  CASE_STUDY.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: demo_notes.md  reviewer_launch_checklist.md  social_preview_notes.md  v0.3.0_intake_and_mapping_plan.md
examples/generated_packs/: accounts_payable_control_risk_matrix.csv  accounts_payable_control_risk_matrix.xlsx  accounts_payable_implementation_readiness_pack.docx  accounts_payable_implementation_readiness_pack.md  accounts_payable_process_map.html  accounts_payable_requirements_pack.docx  accounts_payable_requirements_pack.md  accounts_receivable_requirements_pack.docx  accounts_receivable_requirements_pack.md  bank_reconciliation_requirements_pack.docx  bank_reconciliation_requirements_pack.md  intercompany_settlements_requirements_pack.docx  intercompany_settlements_requirements_pack.md  inventory_costing_requirements_pack.docx  inventory_costing_requirements_pack.md  month_end_close_control_risk_matrix.csv  month_end_close_control_risk_matrix.xlsx  month_end_close_implementation_readiness_pack.docx  month_end_close_implementation_readiness_pack.md  month_end_close_process_map.html  month_end_close_requirements_pack.docx  month_end_close_requirements_pack.md  (+9 more)
scripts/: generate_examples.py  run_evals.py
tests/: test_exports.py  test_process_library.py  test_public_hygiene.py  test_readiness.py  test_smoke.py  test_sop_intake_and_mapping.py  test_template_engine.py  test_visual_outputs.py
(+44 files in other folders)
