[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-requirements-generator"
version = "0.1.0"
description = "Synthetic finance systems requirements pack generator for ERP and transformation analysis."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Zahidah Murira / Chez Solutions" }]
dependencies = [
  "openpyxl>=3.1.5",
  "python-docx>=1.1.2",
  "pyyaml>=6.0.2",
  "streamlit>=1.36.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
finance_requirements_generator = ["process_library/*.yaml", "system_mapping/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
